--- a/styles.css
+++ b/styles.css
@@ -14,4 +14,9 @@ button{
   width: 80vw;
   margin-left: 20px;
   height: 30px;
+  font-weight: bold;
+  transition: transform 300ms ease-in-out;
+}
+button:active {
+  transform: scale(0.8);
 }
